--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: $MONGO_PASSWORD
     networks:
       - pagopa-ecommerce
+    healthcheck:
+      test: echo "db.stats().ok" | mongo --quiet
+      interval: 10s
 
   mongo-express:
     image: mongo-express
@@ -25,6 +28,9 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGO_USERNAME
       ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGO_PASSWORD
       ME_CONFIG_MONGODB_URL: mongodb://$MONGO_USERNAME:$MONGO_PASSWORD@mongo:27017/
+    depends_on:
+      mongo:
+        condition: service_healthy
 
 networks:
   pagopa-ecommerce:
