feat(docker): add redis storage for transactions idempotency keys

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 MONGO_USERNAME="admin"
 MONGO_PASSWORD="password"
+REDIS_HOST="pagopa-ecommerce-transactions-service-redis-1"
+REDIS_PASSWORD="redis_password"
