fix: refactoring to simplify tests

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 MONGO_USERNAME="admin"
 MONGO_PASSWORD="password"
+NODO_URI="https://localhost/nodo"
+NODO_READ_TIMEOUT="10000"
+NODO_CONNECTION_TIMEOUT="10000"
