--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#odo.uri=${NODO_URI}
+#nodo.readTimeout=${NODO_READ_TIMEOUT}
+#nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
+nodo.uri=https://localhost/nodo
+nodo.readTimeout=10000
+nodo.connectionTimeout=10000
+nodo.retry=2
