--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.redis.host=${REDIS_HOST}
 spring.redis.password=${REDIS_PASSWORD}
+spring.jackson.default-property-inclusion=non_null
 logging.level.web=debug
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
