refactor(config): move sessions service config to env variables

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@ MONGO_PASSWORD="password"
 REDIS_HOST="pagopa-ecommerce-transactions-service-redis-1"
 REDIS_PASSWORD="redis_password"
 NODO_URI="https://localhost/nodo"
-NODO_READ_TIMEOUT="10000"
-NODO_CONNECTION_TIMEOUT="10000"
+NODO_READ_TIMEOUT=10000
+NODO_CONNECTION_TIMEOUT=10000
+ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service-1"
+ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
+ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
