--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ logging.level.web=debug
 nodo.uri=${NODO_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
-ecommerceSessions.uri=https://localhost/nodo
-ecommerceSessions.readTimeout=10000
-ecommerceSessions.connectionTimeout=10000
+ecommerceSessions.uri=${ECOMMERCE_SESSIONS_URI}
+ecommerceSessions.readTimeout=${ECOMMERCE_SESSIONS_READ_TIMEOUT}
+ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
