--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,18 @@
             <version>${jacoco.version}</version>
             <scope>test</scope>
         </dependency>
+        <!-- <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.16.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.16.3</version>
+            <scope>test</scope>
+        </dependency> -->
     </dependencies>
     <dependencyManagement>
         <dependencies>
