--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,26 @@ services:
       mongo:
         condition: service_healthy
 
+  pagopa-node-mock:
+    container_name: pagopa-node-mock
+    build:
+      context: ./
+      dockerfile: DockerfileNodoMock
+    environment:
+      PORT: 3002
+      PAGOPA_PROXY_PORT: 3000
+      PAGOPA_PROXY_HOST: http://pagopaproxy
+      PAGOPA_NODO_HOST: http://pagopa-node-mock
+      PAGOPA_ID_CANALE: 97735020584_02
+      PAGOPA_ID_CANALE_PAGAMENTO: 97735020584_xx
+      PAGOPA_ID_INT_PSP: 97735020584
+      PAGOPA_ID_PSP: PAGOPA_01
+      PAGOPA_NODO_PASSWORD: password
+    ports:
+        - 3002:3002
+    networks:
+      - pagopa-ecommerce    
+
 networks:
   pagopa-ecommerce:
     name: pagopa-ecommerce
