--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-MONGO_USERNAME="admin"
-MONGO_PASSWORD="password"
+MONGO_USERNAME=admin
+MONGO_PASSWORD=password
 REDIS_HOST="pagopa-ecommerce-transactions-service-redis-1"
 REDIS_PASSWORD="redis_password"
-NODO_URI="https://localhost/nodo"
+NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
-ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service-1"
+ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service:3000"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
 ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
