refactor(env): add explicit names to service container

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
+MONGO_HOST="pagopa-ecommerce-mongo"
 MONGO_USERNAME=admin
 MONGO_PASSWORD=password
-REDIS_HOST="pagopa-ecommerce-transactions-service-redis-1"
+REDIS_HOST="pagopa-ecommerce-redis"
 REDIS_PASSWORD="redis_password"
 NODO_URI="http://pagopa-node-mock:3002/webservices/pof/PagamentiTelematiciPspNodoservice"
 NODO_READ_TIMEOUT=10000
