--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   pagopa-ecommerce-transactions:
+    container_name: pagopa-ecommerce-transactions
     build:
       context: .
     ports:
@@ -16,7 +17,7 @@ services:
       context: .
       dockerfile: Dockerfile.sessions-service
     ports:
-        - 8082:8080
+        - "8082:8080"
     networks:
       - pagopa-ecommerce
     
@@ -36,11 +37,12 @@ services:
       PAGOPA_ID_PSP: PAGOPA_01
       PAGOPA_NODO_PASSWORD: password
     ports:
-        - 3002:3002
+        - "3002:3002"
     networks:
       - pagopa-ecommerce
 
   redis:
+    container_name: pagopa-ecommerce-redis
     image: redis
     command: ["sh", "-c", 'exec redis-server --requirepass "$$REDIS_PASSWORD"']
     ports:
@@ -56,6 +58,7 @@ services:
       - pagopa-ecommerce
 
   mongo:
+    container_name: pagopa-ecommerce-mongo
     image: mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: $MONGO_USERNAME
@@ -75,7 +78,7 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGO_USERNAME
       ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGO_PASSWORD
-      ME_CONFIG_MONGODB_URL: mongodb://$MONGO_USERNAME:$MONGO_PASSWORD@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://$MONGO_USERNAME:$MONGO_PASSWORD@pagopa-ecommerce-mongo:27017/
     depends_on:
       mongo:
         condition: service_healthy
