--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
 ecommerceSessions.uri=http://${ECOMMERCE_SESSIONS_URI}/sessions
 ecommerceSessions.readTimeout=${ECOMMERCE_SESSIONS_READ_TIMEOUT}
 ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
-spring.data.mongodb.host=mongo
+spring.data.mongodb.host=${MONGO_HOST}
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=password
+spring.data.mongodb.username=${MONGO_USERNAME}
+spring.data.mongodb.password=${MONGO_PASSWORD}
 spring.data.mongodb.database=ecommerce
