feat(api-spec): add rptid in response

--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -58,6 +58,8 @@ components:
           type: string
         authToken:
           type: string
+        rptId:
+          $ref: '#/components/schemas/RptId'  
       required:
         - amount
       example:
