--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
             <version>${jacoco.version}</version>
             <scope>test</scope>
         </dependency>
-        <!-- <dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>1.16.3</version>
@@ -119,7 +119,7 @@
             <artifactId>junit-jupiter</artifactId>
             <version>1.16.3</version>
             <scope>test</scope>
-        </dependency> -->
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
