--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=${MONGO_USERNAME}
 spring.data.mongodb.password=${MONGO_PASSWORD}
 spring.data.mongodb.database=ecommerce
+
+management.endpoint.health.probes.enabled=true
