--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -63,11 +63,20 @@ microservice-chart:
           metricAggregationType: Count
           targetValue: "30"
 
-  # envConfig:
-  #   USER: my-user
+  envConfig:
+    MONGO_HOST: pagopa-ecommerce-mongo
+    MONGO_USERNAME: admin
+    REDIS_HOST: pagopa-ecommerce-redis
+    NODO_URI: https://api.dev.platform.pagopa.it
+    NODO_READ_TIMEOUT: 10000
+    NODO_CONNECTION_TIMEOUT: 10000
+    ECOMMERCE_SESSIONS_URI: pagopa-ecommerce-sessions-service:8080
+    ECOMMERCE_SESSIONS_READ_TIMEOUT: 10000
+    ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: 10000
 
-  # envSecret:
-  #   PASS: helm-template-password
+  envSecret:
+    MONGO_PASSWORD: mongo-ecommerce-password
+    REDIS_PASSWORD: redis-ecommerce-password
 
   keyvault:
     name: "pagopa-d-ecommerce-kv"
