--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -68,11 +68,11 @@ microservice-chart:
     MONGO_USERNAME: admin
     REDIS_HOST: pagopa-ecommerce-redis
     NODO_URI: https://api.dev.platform.pagopa.it
-    NODO_READ_TIMEOUT: 10000
-    NODO_CONNECTION_TIMEOUT: 10000
+    NODO_READ_TIMEOUT: "10000"
+    NODO_CONNECTION_TIMEOUT: "10000"
     ECOMMERCE_SESSIONS_URI: pagopa-ecommerce-sessions-service:8080
-    ECOMMERCE_SESSIONS_READ_TIMEOUT: 10000
-    ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: 10000
+    ECOMMERCE_SESSIONS_READ_TIMEOUT: "10000"
+    ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
 
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
