--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -75,8 +75,8 @@ microservice-chart:
     ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT: "10000"
 
   envSecret:
-    MONGO_PASSWORD: "mongo-ecommerce-password"
-    REDIS_PASSWORD: "redis-ecommerce-password"
+    MONGO_PASSWORD: mongo-ecommerce-password
+    REDIS_PASSWORD: redis-ecommerce-password
 
   keyvault:
     name: "pagopa-d-ecommerce-kv"
