--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -64,9 +64,9 @@ microservice-chart:
           targetValue: "30"
 
   envConfig:
-    MONGO_HOST: pagopa-ecommerce-mongo
-    MONGO_USERNAME: admin
-    REDIS_HOST: pagopa-ecommerce-redis
+    MONGO_HOST: pagopa-d-weu-ecommerce-cosmos-account.mongo.cosmos.azure.com
+    MONGO_USERNAME: pagopa-d-weu-ecommerce-cosmos-account
+    REDIS_HOST: pagopa-d-pagopa-proxy-redis.redis.cache.windows.net
     NODO_URI: https://api.dev.platform.pagopa.it
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
