--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
     env_file: .env
 
   pagopa-ecommerce-sessions-service:
@@ -19,7 +19,7 @@ services:
     ports:
         - "8082:8080"
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
     
   pagopa-node-mock:
     container_name: pagopa-node-mock
@@ -39,7 +39,7 @@ services:
     ports:
         - "3002:3002"
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
 
   redis:
     container_name: pagopa-ecommerce-redis
@@ -48,14 +48,14 @@ services:
     ports:
       - "6379:6379"
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
 
   redis-insight:
     image: redislabs/redisinsight
     ports:
       - "8001:8001"
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
 
   mongo:
     container_name: pagopa-ecommerce-mongo
@@ -64,7 +64,7 @@ services:
       MONGO_INITDB_ROOT_USERNAME: $MONGO_USERNAME
       MONGO_INITDB_ROOT_PASSWORD: $MONGO_PASSWORD
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
     healthcheck:
       test: echo "db.stats().ok" | mongo --quiet
       interval: 10s
@@ -74,7 +74,7 @@ services:
     ports:
       - "8081:8081"
     networks:
-      - pagopa-ecommerce
+      - pagopa-ecommerce-net
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGO_USERNAME
       ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGO_PASSWORD
@@ -84,8 +84,8 @@ services:
         condition: service_healthy
 
 networks:
-  pagopa-ecommerce:
-    name: pagopa-ecommerce
+  pagopa-ecommerce-net:
+    name: pagopa-ecommerce-net
     driver: bridge
     driver_opts:
       com.docker.network.driver.mtu: 1450
