feat(payment-transactions-gateway): add payment-transactions-gateway client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,9 @@ nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
 ecommerceSessions.uri=http://${ECOMMERCE_SESSIONS_URI}/sessions
 ecommerceSessions.readTimeout=${ECOMMERCE_SESSIONS_READ_TIMEOUT}
 ecommerceSessions.connectionTimeout=${ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT}
+paymentTransactionsGateway.uri=http://${PAYMENT_TRANSACTIONS_GATEWAY_URI}/
+paymentTransactionsGateway.readTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT}
+paymentTransactionsGateway.connectionTimeout=${PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT}
 spring.data.mongodb.host=${MONGO_HOST}
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
