docs: add env vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ NODO_CONNECTION_TIMEOUT=10000
 ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service:8080"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
 ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
+PAYMENT_TRANSACTIONS_GATEWAY_URI="pagopa-payment-transactions-gateway:8080"
+PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
+PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT=10000
