[CHK-466] feat: add payment-instruments generated client

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ NODO_CONNECTION_TIMEOUT=10000
 ECOMMERCE_SESSIONS_URI="pagopa-ecommerce-sessions-service:8080"
 ECOMMERCE_SESSIONS_READ_TIMEOUT=10000
 ECOMMERCE_SESSIONS_CONNECTION_TIMEOUT=10000
+ECOMMERCE_PAYMENT_INSTRUMENTS_URI="pagopa-ecommerce-payment-instruments-service:8080"
+ECOMMERCE_PAYMENT_INSTRUMENTS_READ_TIMEOUT=10000
+ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT=10000
