--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -5,3 +5,6 @@ nodo.retry=2
 ecommerceSessions.uri=https://localhost/nodo
 ecommerceSessions.readTimeout=10000
 ecommerceSessions.connectionTimeout=10000
+ecommercePaymentInstruments.uri=https://localhost/nodo
+ecommercePaymentInstruments.readTimeout=10000
+ecommercePaymentInstruments.connectionTimeout=10000
