--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -134,13 +134,16 @@ components:
         pspId:
           type: string
           description: PSP id
+        language:
+          type: string
+          enum: [IT, EN, FR, DE, SL]
+          description: Requested language
       required:
         - amount
         - fee
         - paymentInstrumentId
         - pspId
-      example:
-        rptId: string
+        - language
     RequestAuthorizationResponse:
       type: object
       description: Response body for requesting an authorization for a transaction
@@ -162,7 +165,7 @@ components:
             status:
               $ref: "#/components/schemas/TransactionStatus"
           required:
-           - status
+            - status
       example:
         amount: 200
         status: INITIALIZED
