test: fix tests

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -8,3 +8,6 @@ ecommerceSessions.connectionTimeout=10000
 ecommercePaymentInstruments.uri=https://localhost/nodo
 ecommercePaymentInstruments.readTimeout=10000
 ecommercePaymentInstruments.connectionTimeout=10000
+paymentTransactionsGateway.uri=http://localhost/pgs
+paymentTransactionsGateway.readTimeout=10000
+paymentTransactionsGateway.connectionTimeout=10000
