feat(pgs-client): add check for already authorized transaction

--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -79,6 +79,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+        409:
+          description: Transaction already authorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
 components:
   schemas:
     RptId:
