--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -80,7 +80,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
         409:
-          description: Transaction already authorized
+          description: Transaction already processed
           content:
             application/json:
               schema:
