refactor(api-spec): add 500 status code & response to authorization endpoint

--- a/api-spec/api.yaml
+++ b/api-spec/api.yaml
@@ -85,6 +85,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProblemJson"
         504:
           description: Gateway timeout
           content:
